# stair_llm_games

./: README.md  pyproject.toml
blackjack/: dealer.py  game_state.py  graphflow_blackjack.py  player.py  run_game.py
simple_games/: README.md  run_game.py
simple_games/custom_game2_logs/4o_4o/: game_log_0.json  game_log_1.json  game_log_2.json  game_log_3.json  game_log_4.json  game_log_5.json  game_log_6.json  game_log_7.json  game_log_8.json  game_log_9.json
simple_games/custom_game2_logs/4o_4o_cot/: game_log_0.json  game_log_1.json  game_log_2.json  game_log_3.json  game_log_4.json  game_log_5.json  game_log_6.json  game_log_7.json  game_log_8.json  game_log_9.json
simple_games/custom_game2_logs/4o_o3mini/: game_log_0.json  game_log_1.json  game_log_2.json  game_log_3.json  game_log_4.json  game_log_5.json  game_log_6.json  game_log_7.json  game_log_8.json  game_log_9.json
simple_games/custom_game2_logs/4o_o3mini_cot/: game_log_0.json  game_log_1.json  game_log_2.json  game_log_3.json  game_log_4.json  game_log_5.json  game_log_6.json  game_log_7.json  game_log_8.json  game_log_9.json
simple_games/custom_game2_logs/4omini_4omini_cot/: game_log_0.json  game_log_1.json  game_log_2.json  game_log_3.json  game_log_4.json  game_log_5.json  game_log_6.json  game_log_7.json  game_log_8.json  game_log_9.json
simple_games/custom_game_logs/4o_4o/: game_log_0.json  game_log_1.json  (+8 more)
simple_games/scripts/: eda.ipynb  plot_strategy.py
simple_games/src/: LLMPlayer.py  __init__.py  experiment.py  game.py  game_state.py  logger.py  moderator.py  player.py  topics.py
(+35 files in other folders)
